CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (lmdb_cli C)

ADD_EXECUTABLE(lmdb_cli lmconfig.c lmdb_cli.c)
TARGET_COMPILE_DEFINITIONS(lmdb_cli PUBLIC -DLMDB_APPLICATION_CLI)
TARGET_LINK_LIBRARIES(lmdb_cli -lm ${SQLITE3_LIBRARIES} ${RRDTOOL_LIBRARIES} lmdb)
INCLUDE_DIRECTORIES(BEFORE ../lib)
INSTALL (TARGETS lmdb_cli DESTINATION ${LMDB_INSTALL_BINDIR} COMPONENT binaries)

