CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (lmdb_ls C)

ADD_EXECUTABLE(lmdb_ls lmconfig.c lmdb_ls.c)
TARGET_COMPILE_DEFINITIONS(lmdb_ls PUBLIC -DLMDB_APPLICATION_LS)
TARGET_LINK_LIBRARIES(lmdb_ls -lm ${SQLITE3_LIBRARIES} ${RRDTOOL_LIBRARIES} lmdb)
INCLUDE_DIRECTORIES(BEFORE ../lib)
INSTALL (TARGETS lmdb_ls DESTINATION ${LMDB_INSTALL_BINDIR} COMPONENT binaries)

