CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (lmdb_report C)

ADD_EXECUTABLE(lmdb_report lmconfig.c lmdb_report.c)
TARGET_COMPILE_DEFINITIONS(lmdb_report PUBLIC -DLMDB_APPLICATION_REPORT)
TARGET_LINK_LIBRARIES(lmdb_report -lm ${SQLITE3_LIBRARIES} ${RRDTOOL_LIBRARIES} lmdb)
INCLUDE_DIRECTORIES(BEFORE ../lib)
INSTALL (TARGETS lmdb_report DESTINATION ${LMDB_INSTALL_BINDIR} COMPONENT binaries)

